# deloitte

./: .gitignore  README.md  setup.cfg
.github/workflows/: pytest.yml
logs/: my_logger.py
tests/: test_my_logger.py
