[metadata]
name = deloitte
version = 0.0.1
author_email = rasmusvong@gmail.com
author = Rasmus von Glahn <{author_email}>
home_page = https://github.com/RvonGlahn
long_description = file: README.md

[options]
python_requires = >= 3.9
install_requires = 
    black==21.12b0
    pytest==6.2.5
    pytest-cov==3.0.0
    